<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.grnet</groupId>
  <artifactId>cat</artifactId>
  <packaging>pom</packaging>
  <name>cat</name>
  <version>${revision}</version>

  <modules>
    <module>api</module>
    <module>entity</module>
    <module>repository</module>
    <module>service</module>
    <module>handler</module>
    <module>data-transfer-object</module>
    <module>exception</module>
    <module>mapper</module>
    <module>enum</module>
    <module>validator</module>
    <module>util</module>
  </modules>

  <properties>
    <compiler-plugin.version>3.11.0</compiler-plugin.version>
    <maven.compiler.release>11</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
    <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
    <quarkus.platform.version>3.6.0</quarkus.platform.version>
    <skipITs>true</skipITs>
    <surefire-plugin.version>3.0.0</surefire-plugin.version>
    <lombok.version>1.18.26</lombok.version>
    <jandex.version>1.2.3</jandex.version>
    <mapstruct.version>1.5.5.Final</mapstruct.version>
    <apache.common3.version>3.12.0</apache.common3.version>
    <vavr.version>0.10.4</vavr.version>
    <pivovarit.version>1.5.1</pivovarit.version>
    <revision>1.8.1</revision>
    <json.simple.version>1.1.1</json.simple.version>
    <json.schema.validator>1.0.72</json.schema.validator>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>${quarkus.platform.group-id}</groupId>
        <artifactId>${quarkus.platform.artifact-id}</artifactId>
        <version>${quarkus.platform.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.grnet</groupId>
        <artifactId>cat-entities</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>org.grnet</groupId>
        <artifactId>cat-repositories</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>org.grnet</groupId>
        <artifactId>cat-services</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>org.grnet</groupId>
        <artifactId>cat-handlers</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>org.grnet</groupId>
        <artifactId>cat-enums</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>org.grnet</groupId>
        <artifactId>cat-data-transfer-objects</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>org.grnet</groupId>
        <artifactId>cat-exceptions</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>org.grnet</groupId>
        <artifactId>cat-mappers</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>org.grnet</groupId>
        <artifactId>cat-validators</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>org.grnet</groupId>
        <artifactId>cat-utils</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct</artifactId>
        <version>${mapstruct.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct-processor</artifactId>
        <version>${mapstruct.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${apache.common3.version}</version>
      </dependency>
      <dependency>
        <groupId>io.vavr</groupId>
        <artifactId>vavr</artifactId>
        <version>${vavr.version}</version>
      </dependency>
      <dependency>
        <groupId>com.pivovarit</groupId>
        <artifactId>throwing-function</artifactId>
        <version>${pivovarit.version}</version>
      </dependency>
      <dependency>
        <groupId>com.googlecode.json-simple</groupId>
        <artifactId>json-simple</artifactId>
        <version>${json.simple.version}</version>
      </dependency>
      <dependency>
        <groupId>com.networknt</groupId>
        <artifactId>json-schema-validator</artifactId>
        <version>${json.schema.validator}</version>
      </dependency>

      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-mailer</artifactId>
        <version>3.6.0</version>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.mailpit</groupId>
        <artifactId>quarkus-mailpit</artifactId>
      <version>0.0.9</version>
      </dependency>
      <dependency>
        <groupId>io.quarkus</groupId>
        <artifactId>quarkus-resteasy-reactive-qute</artifactId>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-math3</artifactId>
        <version>3.6.1</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>${quarkus.platform.group-id}</groupId>
          <artifactId>quarkus-maven-plugin</artifactId>
          <version>${quarkus.platform.version}</version>
          <extensions>true</extensions>
          <executions>
            <execution>
              <goals>
                <goal>build</goal>
                <goal>generate-code</goal>
                <goal>generate-code-tests</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler-plugin.version}</version>
          <configuration>
            <compilerArgs>
              <arg>-parameters</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.jboss.jandex</groupId>
          <artifactId>jandex-maven-plugin</artifactId>
          <version>${jandex.version}</version>
          <executions>
            <execution>
              <id>make-index</id>
              <goals>
                <goal>jandex</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire-plugin.version}</version>
          <configuration>
            <systemPropertyVariables>
              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
              <maven.home>${maven.home}</maven.home>
            </systemPropertyVariables>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${surefire-plugin.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>integration-test</goal>
                <goal>verify</goal>
              </goals>
              <configuration>
                <systemPropertyVariables>
                  <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                  <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                  <maven.home>${maven.home}</maven.home>
                </systemPropertyVariables>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>flatten-maven-plugin</artifactId>
          <version>1.3.0</version>
          <configuration>
          </configuration>
          <executions>
            <execution>
              <id>flatten</id>
              <phase>process-resources</phase>
              <goals>
                <goal>flatten</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <profiles>
    <profile>
      <id>native</id>
      <activation>
        <property>
          <name>native</name>
        </property>
      </activation>
      <properties>
        <skipITs>false</skipITs>
        <quarkus.package.type>native</quarkus.package.type>
      </properties>
    </profile>
  </profiles>
</project>